Update page title to jhalonta

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Devicon para iconos de habilidades -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css" />
 
-    <title>Portafolio</title>
+    <title>jhalonta</title>
 </head>
 <body class="antialiased">
 <div id="app"></div>
